# TensorMobility

./: .gitignore  README.md  index.html  pyproject.toml  workflow.yml
.githooks/: pre-commit
cases/: export_scenario.py  run_benchmark.py  run_demo_suite.py  run_mage_grid.py  run_passenger_vehicle_harness.py  run_rank_economy.py  run_sioux_falls_special_cases.py  run_stb_harness.py  run_trmg2_f1.py  run_unified_grid_harness.py
dev_internal_research_paper/: README.md
docs/: DATA_INVENTORY.md  DESIGN_PRINCIPLES_V0_4.md  DESIGN_PRINCIPLES_V0_5.md  DESIGN_REVIEW_2026-07-22.md  DESIGN_REVIEW_RESPONSE.md  DESIGN_UPDATE_RANK_ECONOMY.md  DESIGN_v0_5_REVIEW.md  ECOSYSTEM_DESIGN.md  ENGINES.md  EXPLAINER_DESIGN.md  EXPLAINER_SPEC_STATUS.md  EXPLAINER_SPEC_v1.md  EXPLAINER_SPEC_v2_STUDIO.md  EXPLAINER_SPEC_v3_PRACTICE.md  GMNS_DNL_INTEGRATION.md  GMNS_DNL_INTEGRATION_V0_5.md  GRAPHICAL_ABSTRACT_ALIGNMENT.md  MORNING_REVIEW_2026-07-21.md  MORNING_REVIEW_2026-07-22.md  ORIENTATION.md  PINN_INTEGRATION.md  REVIEW_RESPONSE_V07_PLAN.md  TENSOR_AXES.md  TSE_COMPUTATIONAL_GRAPH.md  practice_scenario.json  studio_design_tokens.json  workflow.html
explainer/: index.html  practice.html  studio.html  tensor-admm.html
figures/: README.md
public_gui/: README.md  demo_dashboard.html  workflow.html
research_papers/: CHOICE_GRAPH_RELATED_WORK.md  README.md  main_v06.aux  main_v06.tex
teaching/: README.md
tensormobility/: __init__.py  cli.py
tests/: test_activity_dta.py  test_adjoint_is_backprop.py  test_choice_graph.py  test_core.py  test_equilibrium_engines.py  test_trmg2.py  (+16 more)
(+63 files in other folders)
