[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tensormobility"
version = "0.6.2"
description = "Mobility systems as flow-through tensors: space, time, and behavior in one certified computational graph (STB-FTT framework)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0", "scipy>=1.10", "networkx>=3.0", "matplotlib>=3.7", "pyyaml>=6.0", "tabulate>=0.9"]

[project.optional-dependencies]
learning = ["torch>=2.0"]
dev = ["pytest>=7"]

[project.scripts]
tm = "tensormobility.cli:main"

[project.urls]
Homepage = "https://github.com/asu-trans-ai-lab/TensorMobility"

[tool.setuptools.packages.find]
include = ["tensormobility*"]

[tool.setuptools.package-data]
tensormobility = ["data/**/*.csv"]
